# interbotix_arm_project

./: README.md  benchmark.db  benchmark_results.csv  compute_fk_service_logs.txt  frames_2024-05-23_15.12.57.gv  install.sh  joint_limits.yaml  move_group_config.yaml  move_group_config_correct.yaml  moveit_controllers.yaml  test.launch.py  test.sh  verification.txt
emse_interbotix_moveit/: .setup_assistant
emse_interbotix_moveit/reachpose/: package.xml
emse_interbotix_moveit/reachpose/launch/: move_group_interface.launch.py
emse_interbotix_moveit/rx150_moveit_config/config/: initial_positions.yaml  moveit.rviz
emse_interbotix_moveit/rx150_moveit_config/config/srdf/: rx150.srdf
emse_interbotix_moveit/rx150_moveit_config/launch/: setup_assistant.launch.py  test.launch.py
emse_reachpose/: CMakeLists.txt  package.xml
emse_reachpose/launch/: move_group_interface.launch.py
emse_reachpose/src/: reachjointconfig.cpp
emse_rx150_moveit_config/: CMakeLists.txt  package.xml
emse_rx150_moveit_config/launch/: move_group.launch.py
install/: local_setup.sh  setup.bash  setup.ps1  setup.sh  setup.zsh
install/emse_moveit_actions/include/emse_moveit_actions/emse_moveit_actions/action/: reach_pose.h  reach_pose.hpp
install/emse_moveit_actions/include/emse_moveit_actions/emse_moveit_actions/msg/: rosidl_generator_c__visibility_control.h  rosidl_typesupport_fastrtps_c__visibility_control.h  rosidl_typesupport_fastrtps_cpp__visibility_control.h  rosidl_typesupport_introspection_c__visibility_control.h
install/emse_moveit_actions/share/ament_index/resource_index/rosidl_interfaces/: emse_moveit_actions
install/emse_moveit_actions/share/emse_moveit_actions/: package.bash  package.dsv  package.ps1  package.sh  package.xml  package.zsh
install/emse_moveit_actions/share/emse_moveit_actions/action/: ReachPose.idl
install/emse_moveit_actions/share/emse_moveit_actions/cmake/: ament_cmake_export_include_directories-extras.cmake  emse_moveit_actionsConfig.cmake  emse_moveit_actions__rosidl_typesupport_cExport-noconfig.cmake  emse_moveit_actions__rosidl_typesupport_cppExport-noconfig.cmake  emse_moveit_actions__rosidl_typesupport_cppExport.cmake  emse_moveit_actions__rosidl_typesupport_introspection_cExport-noconfig.cmake  emse_moveit_actions__rosidl_typesupport_introspection_cExport.cmake  emse_moveit_actions__rosidl_typesupport_introspection_cppExport.cmake  export_emse_moveit_actions__rosidl_generator_cExport.cmake  export_emse_moveit_actions__rosidl_generator_cppExport.cmake  export_emse_moveit_actions__rosidl_generator_pyExport-noconfig.cmake  export_emse_moveit_actions__rosidl_typesupport_fastrtps_cExport-noconfig.cmake  export_emse_moveit_actions__rosidl_typesupport_fastrtps_cppExport.cmake  rosidl_cmake-extras.cmake  rosidl_cmake_export_typesupport_libraries-extras.cmake
install/emse_reachpose/lib/emse_reachpose/: plan_pose  reach_pose  reachpose
install/emse_reachpose/share/ament_index/resource_index/parent_prefix_path/: emse_reachpose
install/emse_reachpose/share/emse_reachpose/: local_setup.sh  package.bash  package.dsv  package.ps1  package.sh  package.zsh
install/emse_rx150_benchmarks/lib/: libmoveit_ros_benchmarks.so.2.5.4
install/emse_rx150_benchmarks/lib/emse_rx150_benchmarks/: benchmark  moveit_combine_predefined_poses_benchmark  moveit_run_benchmark
install/emse_rx150_benchmarks/share/emse_rx150_benchmarks/: .~lock.random_poses.csv#  benchmark.launch.py  benchmark_poses.launch.py  box.scene  generate_valid_poses.py  local_setup.dsv  local_setup.sh  package.bash  package.dsv  package.ps1  package.sh  package.zsh
install/emse_rx150_benchmarks/share/emse_rx150_benchmarks/cmake/: emse_rx150_benchmarksConfig.cmake
install/emse_rx150_moveit_config/share/emse_rx150_moveit_config/: package.bash  package.dsv  package.ps1  package.sh  package.zsh
install/emse_rx150_moveit_config/share/emse_rx150_moveit_config/config/: kinematics.yaml  ompl_planning.yaml  rx150.ros2_control.xacro
log/: latest_build
reachpose/: CMakeLists.txt
reachpose/launch/: joint_state_move_group_interface.launch.py
reachpose/src/: reachpose.cpp
rx150_moveit_config/launch/: xsarm_moveit.launch.py
src/emse_interbotix_moveit/rx150_moveit_config/config/: moveit_controllers.yaml  ros2_controllers.yaml
src/emse_interbotix_moveit/rx150_moveit_config/launch/: demo.launch.py  moveit_rviz.launch.py  rsp.launch.py
src/emse_moveit_actions/: CMakeLists.txt
src/emse_moveit_actions/action/: ReachPose.action
src/emse_reachpose/: CMakeLists.txt
src/emse_reachpose/launch/: move_group_interface.launch.py
src/emse_reachpose/src/: reach_pose.cpp  reachpose.cpp  reachpose_action_server.cpp
src/emse_rx150_benchmarks/: CMakeLists.txt
src/emse_rx150_benchmarks/config/: ompl_benchmark_rx150.yaml  random_poses.csv  valid_pick_and_place_poses.csv  visualisation.py
src/emse_rx150_benchmarks/data/: benchmark_24_states.db
src/emse_rx150_benchmarks/src/: benchmark.cpp  benchmark_action_interface.cpp
src/emse_rx150_moveit_config/: CMakeLists.txt
src/emse_rx150_moveit_config/data/: warehouse_db.sqlite
src/emse_rx150_moveit_config/launch/: benchmark_pre_step.launch.py  test.launch.py
src/reachpose/: CMakeLists.txt
src/reachpose/src/: reachpose.cpp
src/rx150_moveit_config/config/: moveit_controllers.yaml  ompl_planning.yaml  rx150.urdf.xacro
src/rx150_moveit_config/launch/: test.launch.py
(+14 files in other folders)
