<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>rx150_moveit_config</name>
  <version>0.3.0</version>
  <description>A package with all the configuration and launch files for using the rx150 with the MoveIt Motion Planning Framework</description>
  <maintainer email="ammarkhodja.kilam@gmail.com">Malik AMMAR KHODJA</maintainer>
  <license>BSD</license>
  <author email="ammarkhodja.kilam@gmail.com">Malik AMMAR KHODJA</author>

  <buildtool_depend>ament_cmake</buildtool_depend>
  <depend>moveit_ros_move_group</depend>
  <depend>moveit_simple_controller_manager</depend>
  <depend>moveit_kinematics</depend>
  <depend>moveit_planners_ompl</depend>
  <depend>moveit_ros_visualization</depend>
  <depend>moveit_setup_assistant</depend>
  <depend>joint_state_publisher</depend>
  <depend>robot_state_publisher</depend>
  <depend>xacro</depend>

  <depend>interbotix_xs_modules</depend>
  <depend>interbotix_xsarm_sim</depend>
  <depend>interbotix_xsarm_descriptions</depend>
  <depend>interbotix_xsarm_ros_control</depend>

  <!-- <depend>backward-ros</depend> -->

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>

</package>






